Day 6 - minor cleanups